--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
   <script>
     // 🔥 Firebase Config (แก้เป็นของคุณ)
     const firebaseConfig = {
-      apiKey: "API_KEY",
-      authDomain: "PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://PROJECT_ID-default-rtdb.firebaseio.com",
-      projectId: "PROJECT_ID",
+     apiKey: "AIzaSyCiJicTKjqo02N5tl2Tcf1iaW-vkWdCvaM",
+     authDomain: "project01-21d95.firebaseapp.com",
+     databaseURL: "https://project01-21d95-default-rtdb.asia-southeast1.firebasedatabase.app",
+     projectId: "project01-21d95",
     };
 
     firebase.initializeApp(firebaseConfig);
